--- a/nyclean/public/index.html
+++ b/nyclean/public/index.html
@@ -1,6 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.4.0/dist/leaflet.css" />
+<script src="https://unpkg.com/leaflet@1.4.0/dist/leaflet.js"></script>
+
+<style>
+  body {
+    padding-bottom: 30px;
+  }
+  h1, h2, p {
+    font-family: sans-serif;
+    text-align: center;
+  }
+  .leaflet-container {
+    height: 400px;
+    width: 80%;
+    margin: 0 auto;
+  }
+</style>
     <link
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -26,6 +43,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>GREENYC</title>
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
